--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=PokemonReviewApp
 spring.datasource.username=postgres
-spring.security.user.password=postgres
+spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5433/PokemonReviewApp
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.flyway.baseline-on-migrate=true
